--- a/build.gradle
+++ b/build.gradle
@@ -5,10 +5,11 @@ buildscript {
     repositories {
         google()
         jcenter()
+        mavenCentral()
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:3.1.4'
-        classpath 'com.google.gms:google-services:4.0.1'
+        classpath 'com.google.gms:google-services:4.1.0' // google-services plugin
         
 
         // NOTE: Do not place your application dependencies here; they belong
