--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,6 +3,7 @@
     package="com.example.matheus.wannaplay">
 
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
 
     <application
@@ -13,8 +14,14 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <meta-data
+            android:name="com.google.android.gms.version"
+            android:value="@integer/google_play_services_version" />
+        <meta-data
             android:name="com.facebook.sdk.ApplicationId"
             android:value="@string/facebook_app_id" />
+        <meta-data
+            android:name="com.google.android.geo.API_KEY"
+            android:value="AIzaSyDHurm7Ln5_sYc7iufjsp1okDsRgGJs55Q"/>
 
         <activity
             android:name="com.facebook.FacebookActivity"
@@ -48,6 +55,7 @@
         <activity
             android:name=".RegisterActivity"
             android:theme="@style/AppTheme_NoActionBar" />
+        <activity android:name=".MusicianProfileActivity"></activity>
     </application>
 
 </manifest>
