--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,16 +27,20 @@ dependencies {
     implementation 'com.android.support:support-vector-drawable:27.1.1'
     implementation 'com.github.Innovattic:range-seek-bar:v1.0.2'
     implementation 'com.google.firebase:firebase-core:16.0.4'
-    implementation 'com.google.firebase:firebase-auth:16.0.4'
-    implementation 'com.google.firebase:firebase-database:16.0.3'
+    implementation 'com.google.firebase:firebase-auth:16.0.5'
+    implementation 'com.google.firebase:firebase-database:16.0.4'
     implementation 'com.google.firebase:firebase-firestore:17.1.2'
-    implementation 'com.google.firebase:firebase-storage:16.0.3'
+    implementation 'com.google.firebase:firebase-storage:16.0.4'
+    implementation 'com.google.firebase:firebase-storage:16.0.4'
+    implementation 'com.firebaseui:firebase-ui-firestore:4.2.1'
     implementation 'com.google.android.gms:play-services-location:16.0.0'
-    implementation 'com.facebook.android:facebook-android-sdk:4.37.0'
-    implementation 'com.facebook.android:facebook-android-sdk:[4,5)'
-    implementation 'com.squareup.picasso:picasso:2.71828'
-
+    implementation 'com.facebook.android:facebook-android-sdk:4.38.1'
     implementation 'com.github.bumptech.glide:glide:4.8.0'
+
+    // Arch
+    implementation "android.arch.core:runtime:1.1.1"
+    implementation "android.arch.core:common:1.1.1"
+
     annotationProcessor 'com.github.bumptech.glide:compiler:4.8.0'
 
     implementation 'de.hdodenhof:circleimageview:2.2.0'
