--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,8 +31,9 @@ dependencies {
     implementation 'com.google.firebase:firebase-database:16.0.4'
     implementation 'com.google.firebase:firebase-firestore:17.1.2'
     implementation 'com.google.firebase:firebase-storage:16.0.4'
-    implementation 'com.google.firebase:firebase-storage:16.0.4'
     implementation 'com.firebaseui:firebase-ui-firestore:4.2.1'
+    implementation 'com.facebook.android:facebook-login:4.38.1'
+    implementation 'net.danlew:android.joda:2.10.1'
     implementation 'com.google.android.gms:play-services-location:16.0.0'
     implementation 'com.facebook.android:facebook-android-sdk:4.38.1'
     implementation 'com.github.bumptech.glide:glide:4.8.0'
